# experiments

./: README.md
fast_shared_map/: Cargo.toml  README.md
fast_shared_map/src/: common.rs  main.rs  read_only.rs  read_update.rs  read_update_big.rs  read_update_gigant.rs
gui-test/: Cargo.toml
gui-test/src/: main.rs
win-api/: Cargo.toml
win-api/bindings/: Cargo.toml  build.rs
win-api/src/: main.rs
win-gui/: Cargo.toml
win-gui/src/: main.rs
win-log/: Cargo.toml
win-log/bindings/: Cargo.toml  build.rs
win-log/src/: common.rs  configuration.rs  main.rs
win-log/src/extractors/: README.md  dns.rs  dns_file_watcher.rs  mod.rs  winevt.rs
